--- a/help.html
+++ b/help.html
@@ -62,7 +62,7 @@
             <div class="page-header">
                 <h1>Get Involved Today!</h1>
             </div>
-            <div class="panel">
+            <div class="panel panel-primary">
                 <div class="panel-heading">What can you do to help out the environment today?</div>
                 <div class="panel-body">
                     <div class="list-group">
