Reverted - No Contexual Classes for List-Group

--- a/help.html
+++ b/help.html
@@ -73,35 +73,35 @@
                         ** Used <a> tags since if using list-group-item-* gives a nice, free hover effect
                         -->
                         
-                        <a class="list-group-item list-group-item-success">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">1) Donate hair.</h4>
                             <p class="list-group-item-text">Hair has been the number one solution to block spills and leaks from drains. With your donation, we can help block the BP Oil Spill, and any future oil spills that may harm our aquatic ecosystems.</p>
                         </a>
-                        <a class="list-group-item list-group-item-info">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">2) Adopt a Polar Bear.</h4>
                             <p class="list-group-item-text">With the recent melting of the polar ice caps, an increasing number of polar bears have become homeless. Share the kindness this season and adopt a polar bear today.</p>
                         </a>
-                        <a class="list-group-item list-group-item-success">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">3) Stop the Road Runner.</h4>
                             <p class="list-group-item-text">The level of body heat that the road runner is releasing is simply astonishing, causing an increase of 2&deg;C in the planet's temperature! Simply stopping the road runner can cool down our planet by 2&deg;C.</p>
                         </a>
-                        <a class="list-group-item list-group-item-info">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">4) Switch to using synergy.</h4>
                             <p class="list-group-item-text">Use a cleaner energy source, such as synergy. The name even sounds <span style="text-decoration: line-through;">synister</span> sinfully amazing.</p>
                         </a>
-                        <a class="list-group-item list-group-item-success">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">5) Start a Plankton farm.</h4>
                             <p class="list-group-item-text">Plankton are small organisms that live in bodies of water that also act as a source of food to fish and whales. By starting a plankton farm - more specifically phytoplankton - you will help reduce carbon dioxide in the atmosphere, as providing yummy food to the dolphins in Marineland, Canada. Start a phytoplankton farm and go green today!</p>
                         </a>
-                        <a class="list-group-item list-group-item-info">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">6) Contribute to research in the "Perpetual Motion Machine"</h4>
                             <p class="list-group-item-text">Most sources of energy contribute towards global warming, such as the emission of fossil fuels during combusion. By contributing to research in a "Perpetual Motion Machine", you are helping contribute to a better tomorrow - where we are not destroying our planet for energy.</p>
                         </a>
-                        <a class="list-group-item list-group-item-success">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">7) Support Project "Cloud Bleaching"</h4>
                             <p class="list-group-item-text">Write to your local congressman or MP in support of Project Cloud Bleaching. By altering the clouds to become more reflective, we will be able to reduce the amount of heat coming to the Earth. As well, this will make poluted areas, such as China, look better, thereby improving the quality of living.</p>
                         </a>
-                        <a class="list-group-item list-group-item-info">
+                        <a class="list-group-item">
                             <h4 class="list-group-item-heading">8) Opt out of the laws of thermodynamics</h4>
                             <p class="list-group-item-text">It has recently become clear that the laws of thermodynamics have become very troublesome. It is due to these laws that the earth's atmosphere is rising in temperature. Take a stand! Opt out today!</p>
                         </a>
